--- a/finalterm_socialnetwork/src/components/Header/HeaderStyle.css
+++ b/finalterm_socialnetwork/src/components/Header/HeaderStyle.css
@@ -7,6 +7,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: flex-end;
+  box-shadow: 0 5px 5px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
 
 .Header_LogOutButton {
