--- a/finalterm_socialnetwork/src/components/Follow/FollowStyle.css
+++ b/finalterm_socialnetwork/src/components/Follow/FollowStyle.css
@@ -1,8 +1,75 @@
-.Follower_Container {
+.Follow_Container {
   width: 300px;
   height: 350px;
+  margin-left: 100px;
+  margin-top: 40px;
+  margin-bottom: 60px;
+}
+
+.Follow_div1 {
+  width: 100%;
+  background-color: #E6ECF0;
+  margin-bottom: 10px;
+}
+
+.Follow_div2 {
+  width: 100%;
+  height: 100%;
   background-color: white;
   border-radius: 3px;
-  margin-left: 100px;
-  margin-top: 50px;
+  overflow: hidden;
+}
+
+.Follow_List {
+  width: 100%;
+  height: 100%;
+  overflow-y: scroll;
+  padding-right: 17px; /* Increase/decrease this value for cross-browser compatibility */
+  box-sizing: content-box; /* So the width will be 100% + 17px */
+}
+
+.Follow_Title {
+  font-size: 30px;
+  font-weight: bold;
+  letter-spacing: 2px;
+}
+
+.Follow_FollowList_Container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-left: -20px;
+}
+
+.Follow_FollowList_div1 {
+  display: flex;
+  flex-direction: column;
+  margin-left: 20px;
+}
+
+.Follow_FollowList_Image {
+  width: 50px;
+  height: 50px;
+  border-radius: 50px;
+}
+
+.Follow_FollowList_Username {
+  font-weight: bold;
+  letter-spacing: 2px;
+  font-size: 15px;
+}
+
+.Follow_FollowList_SubContent {
+  font-weight: 200;
+  letter-spacing: 2px;
+  font-size: 15px;
+}
+
+.Follow_FollowList_div2 {
+  width: 260px;
+  height: 1px;
+  background-color: #E6ECF0;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  margin-left: -20px;
 }
