--- a/finalterm_socialnetwork/src/components/Header/HeaderStyle.css
+++ b/finalterm_socialnetwork/src/components/Header/HeaderStyle.css
@@ -1,4 +1,3 @@
-
 .Header_container {
   width: 100%;
   height: 100px;
@@ -7,7 +6,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: flex-end;
-  box-shadow: 0 5px 5px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
 
 .Header_LogOutButton {
@@ -17,6 +16,17 @@
   font-weight: bold;
   letter-spacing: 5px;
   outline: none;
-  margin-right: 100px;
   cursor: pointer;
+  margin-right: 150px;
+}
+
+.Header_TransferButton {
+  background-color: #1c313a;
+  border: none;
+  color: white;
+  font-weight: bold;
+  letter-spacing: 5px;
+  outline: none;
+  cursor: pointer;
+  margin-right: 50px;
 }
