--- a/finalterm_socialnetwork/src/components/Follow/FollowStyle.css
+++ b/finalterm_socialnetwork/src/components/Follow/FollowStyle.css
@@ -18,6 +18,7 @@
   background-color: white;
   border-radius: 3px;
   overflow: hidden;
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1), 0 6px 6px rgba(0, 0, 0, 0.15);
 }
 
 .Follow_List {
