--- a/finalterm_socialnetwork/src/components/Wall/WallStyle.css
+++ b/finalterm_socialnetwork/src/components/Wall/WallStyle.css
@@ -5,7 +5,7 @@
   height: 800px;
   background-color: white;
   border-radius: 3px; 
-
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1), 0 6px 6px rgba(0, 0, 0, 0.15);
   overflow: hidden;
 }
 
