--- a/src/components/UserInfo/UserInfoStyle.css
+++ b/src/components/UserInfo/UserInfoStyle.css
@@ -8,7 +8,7 @@
   align-items: center;
 }
 
-.UserInfo_Div1{
+.UserInfo_Div1 {
   display: flex;
   flex-direction: column;
 }
@@ -62,17 +62,32 @@
   margin-top: 20px;
   border-radius: 3px;
   border-style: groove;
-  background-color: #E6ECF0;
+  background-color: #e6ecf0;
   font-size: 20px;
   font-weight: bold;
   padding: 2px;
 }
 
-.UserInfo_Cancel{
+.UserInfo_Cancel {
   font-weight: bold;
   cursor: pointer;
 }
 
-.UserInfo_SaveProfile{
+.UserInfo_SaveProfile {
   margin-left: 20px;
+}
+
+.UserInfo_ChangeAvatar {
+  position: absolute;
+  margin-left: 150px;
+  margin-top: 60px;
+  border-radius: 100px;
+  border-width: 2px;
+  padding: 10px;
+  cursor: pointer;
+}
+
+.UserInfo_Camera {
+  width: 40px;
+  height: 40px;
 }
