--- a/src/components/Wall/WallStyle.css
+++ b/src/components/Wall/WallStyle.css
@@ -1,10 +1,10 @@
 .Wall_Container {
   margin-left: 100px;
-  margin-top: 50px;
+  margin-top: 20px;
   width: 800px;
-  height: 800px;
+  height: 760px;
   background-color: white;
-  border-radius: 3px; 
+  border-radius: 3px;
   box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1), 0 6px 6px rgba(0, 0, 0, 0.15);
   overflow: hidden;
 }
@@ -24,7 +24,7 @@
 }
 
 .Wall_Post_div1 {
-  width: 100%;
+  width: 97%;
   display: flex;
   flex-direction: row;
 }
@@ -34,14 +34,20 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
-  margin-top: 50px;
+  margin-top: 10px;
   margin-bottom: 20px;
 }
 
-.Wall_Post_Line{
+.Wall_Post_div3 {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.Wall_Post_Line {
   width: 100%;
   height: 1px;
-  background-color: #E6ECF0;
+  background-color: #e6ecf0;
   margin-bottom: 10px;
 }
 
@@ -51,10 +57,18 @@
   border-radius: 50px;
 }
 
-.Wall_Post_PostContent {
+.Wall_Post_Username {
+  margin-left: 20px;
+  font-weight: bold;
   font-size: 15px;
+  letter-spacing: 2px;
+}
+
+.Wall_Post_PostContent {
+  font-size: 20px;
   width: 100%;
   margin-left: 20px;
+  color: black;
 }
 
 .Wall_Post_ActionButton {
@@ -72,7 +86,7 @@
 .Wall_Post_Statistic {
   font-size: 12px;
   font-weight: 500;
-  font-style: italic
+  font-style: italic;
 }
 
 .Wall_Post_Icon {
@@ -82,6 +96,31 @@
   margin-left: 20px;
 }
 
-.Wall_Post_Sub1{
+.Wall_Post_Sub1 {
   margin-right: 275px;
+}
+
+.Wall_Button {
+  margin-left: 100px;
+  margin-top: 30px;
+  border: none;
+  background-color: #1c313a;
+  color: white;
+  font-weight: bolder;
+  font-size: 15px;
+  width: 200px;
+  height: 40px;
+  border-radius: 3px;
+  letter-spacing: 4px;
+  cursor: pointer;
+  outline: none;
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+}
+
+.Wall_Loading {
+  font-size: 30px;
+  font-weight: bolder;
+  letter-spacing: 4px;
+  color: #1c313a;
+  margin-left: 23%;
 }
