--- a/src/components/Wall/WallStyle.css
+++ b/src/components/Wall/WallStyle.css
@@ -124,3 +124,134 @@
   color: #1c313a;
   margin-left: 23%;
 }
+
+.Wall_Popup_Container {
+  width: 100%;
+  height: 550px;
+}
+
+.Wall_Popup_div1 {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-top: 20px;
+  margin-left: 20px;
+}
+
+.Wall_Popup_div2 {
+  width: 87%;
+  display: flex;
+  flex-direction: column;
+  margin-left: 30px;
+}
+
+.Wall_Popup_Line {
+  margin-top: 50px;
+  width: 100%;
+  height: 0.5px;
+  background-color: #1c313a;
+}
+
+.Wall_Popup_Avatar {
+  width: 80px;
+  height: 80px;
+  border-radius: 100px;
+}
+
+.Wall_Popup_Username {
+  font-weight: bold;
+  font-size: 15px;
+  letter-spacing: 2px;
+}
+
+.Wall_Popup_PostContent {
+  font-size: 20px;
+  width: 100%;
+  color: black;
+}
+
+.Wall_Popup_Comment_Container {
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  width: 100%;
+  height: 200px;
+  background-color: #1c313a;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.Wall_Popup_Comment {
+  resize: none;
+  width: 80%;
+  height: 100px;
+  font-size: 20px;
+}
+
+.Wall_Popup_Comment_Button{
+  margin-top: 10px;
+  color: white;
+  background-color: #1c313a;
+  width: 100px;
+  height: 50px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  font-size: 20px;
+  font-weight: bolder;
+  letter-spacing: 2px;
+}
+
+.Wall_Popup_Comment_List {
+  width: 75%;
+  display: flex;
+  flex-direction: column;
+  margin-left: 120px;
+  margin-top: 20px;
+  height: 410px;
+  overflow-y: scroll;
+}
+
+.Wall_Popup_Comment_List_Container {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.Wall_Popup_Comment_List_Avatar {
+  width: 50px;
+  height: 50px;
+  border-radius: 100px;
+}
+
+.Wall_Popup_Comment_List_div1 {
+  display: flex;
+  flex-direction: column;
+  margin-left: 20px;
+  height: 60px;
+}
+
+.Wall_Popup_Comment_List_Username {
+  font-size: 15px;
+  font-weight: bolder;
+  letter-spacing: 2px;
+  color: #1c313a;
+}
+
+.Wall_Popup_Comment_List_Content {
+  margin-top: 5px;
+  font-size: 15px;
+  font-weight: 200px;
+  color: black;
+}
+
+.Wall_Popup_Comment_List_Line {
+  width: 100%;
+  height: 1px;
+  background-color: #e6ecf0;
+}
