--- a/src/components/Wall/WallStyle.css
+++ b/src/components/Wall/WallStyle.css
@@ -192,7 +192,7 @@
   font-size: 20px;
 }
 
-.Wall_Popup_Comment_Button{
+.Wall_Popup_Comment_Button {
   margin-top: 10px;
   color: white;
   background-color: #1c313a;
@@ -212,7 +212,7 @@
   flex-direction: column;
   margin-left: 120px;
   margin-top: 20px;
-  height: 410px;
+  height: 350px;
   overflow-y: scroll;
 }
 
@@ -256,4 +256,25 @@
   width: 100%;
   height: 1px;
   background-color: #e6ecf0;
+}
+
+.Wall_Processing_Comment_Container {
+  width: 300px;
+  height: 100px;
+  position: absolute;
+  border-radius: 3px;
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1), 0 6px 6px rgba(0, 0, 0, 0.15);
+  background-color: #1c313a;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 30%;
+  left: 25%;
+}
+
+.Wall_Processing_Comment_Content {
+  font-weight: bolder;
+  font-size: 20px;
+  letter-spacing: 4px;
+  color: white
 }
